# bazel_workshop

./: .bazelignore  .bazelproject  .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE.bazel  maven_install.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.aspect/bazelrc/: README.md
.github/: ci.bazelrc
.github/actions/bazel-changed-targets/: README.md  action.yml  bazel-diff.sh  create_matrix.js  filter_targets.sh  ignore_targets.txt
.github/actions/bazel-setup/: README.md  action.yml
.github/actions/bazel-target-helper/: README.md  action.yml
.github/workflows/: CI.yaml  README.md
examples/case1/: BUILD.bazel  README.md
examples/case2/: BUILD.bazel  README.md  assert.sh
examples/case3/: BUILD.bazel  Greeter.java  HelloWorld.java  README.md  hello_world_test.sh
examples/case4/: BUILD.bazel  GreeterTest.java  README.md
examples/case5/: BUILD.bazel  README.md
examples/case5/src/test/java/com/example/: ContextTest.java
examples/case5/src/test/resources/: application.yml
examples/case6/: BUILD.bazel  README.md
examples/case7/: BUILD.bazel  README.md  package.json  vite.bzl
scripts/: README.md  get_release_version  get_workspace_status
teams/libs/backend/greeting-service/: BUILD.bazel
teams/libs/backend/greeting-service/src/main/java/com/example/java/: GreetingService.java
teams/libs/backend/greeting-service/src/test/java/com/example/greeting/: GreetingTest.java
teams/libs/frontend/greeting-component/: BUILD.bazel  package.json  tsconfig.json
teams/libs/frontend/greeting-component/src/: greeting.tsx
teams/team-1/java-app/: BUILD.bazel
teams/team-1/java-app/src/main/java/com/example/java/: Controller.java  Main.java
teams/team-1/java-app/src/test/java/com/example/java/: ContextTest.java
teams/team-1/kotlin-app/: BUILD.bazel
teams/team-1/kotlin-app/src/main/kotlin/com/example/kotlin/: Controller.kt  Main.kt
teams/team-1/kotlin-app/src/test/kotlin/com/example/kotlin/: ContextTest.kt
teams/team-1/mixed-java-kotlin-app/: BUILD.bazel
teams/team-1/mixed-java-kotlin-app/src/main/java/com/example/mixed/: Util.java
teams/team-1/mixed-java-kotlin-app/src/main/kotlin/com/example/mixed/: Controller.kt  Main.kt
teams/team-1/mixed-java-kotlin-app/src/test/java/com/example/mixed/: UtilTest.java
teams/team-1/mixed-java-kotlin-app/src/test/kotlin/com/example/mixed/: ContextTest.kt
teams/team-2/remix-app/: BUILD.bazel  package.json
teams/team-2/remix-app/app/: BUILD.bazel  root.tsx
teams/team-2/remix-app/app/routes/: _index.tsx
teams/team-2/vite-app/: BUILD.bazel  package.json
teams/team-2/vite-app/src/: App.tsx
tools/: container_image.bzl  generic_spring_boot_app.bzl  kotlin_app.bzl  kotlin_test_suite.bzl  openapi.bzl  spring_boot_app.bzl  stamp_tags.bzl
workshop/case1/: BUILD.bazel  README.md
workshop/case2/: BUILD.bazel  Greeter.java  GreeterTest.java  HelloWorld.java  README.md  hello_world_test.sh
workshop/case3/: BUILD.bazel  README.md  api.yaml  package.json
workshop/case3/src/main/java/com/example/: BUILD.bazel  Main.java
workshop/case3/src/main/java/com/example/customer/: BUILD.bazel
workshop/case3/src/main/java/com/example/hello/: BUILD.bazel  HelloController.java
workshop/case3/src/main/java/com/example/products/: BUILD.bazel  ProductController.java  ProductsController.java
workshop/case3/src/main/resources/: application.yml
workshop/case3/src/test/java/com/example/: ContextTest.java
workshop/case3/src/test/java/com/example/customer/: BUILD.bazel
workshop/case3/src/test/java/com/example/products/: BUILD.bazel  ProductsControllerTest.java
workshop/case3/src/test/java/com/example/shoppingcart/: ShoppingCartControllerTest.java
workshop/case4/: BUILD.bazel  README.md  tsconfig.json
workshop/case4/src/: index.tsx
workshop/case4/src/main/java/com/example/: BUILD.bazel
workshop/case4/src/main/java/com/example/customer/: BUILD.bazel  CustomerController.java  CustomerResponse.java
workshop/case4/src/main/java/com/example/hello/: BUILD.bazel  HelloController.java
workshop/case4/src/main/java/com/example/products/: BUILD.bazel  ProductResponse.java
workshop/case4/src/test/java/com/example/customer/: BUILD.bazel  CustomerControllerTest.java
workshop/case4/src/test/java/com/example/products/: BUILD.bazel
workshop/case5/: BUILD.bazel  README.md  api.yaml  index.html  package.json  tsconfig.json  vitest.config.mjs
workshop/case5/src/: App.test.tsx  App.tsx  index.tsx
workshop/case6/: README.md  bazel-diff.sh
