load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "contrib_rules_jvm",
    sha256 = "f0a43433dbf4b96aedb24d225e68e50a9ed0832d7a10f612ffe8ae9042f40a22",
    strip_prefix = "rules_jvm-0.25.1",
    url = "https://github.com/bazel-contrib/rules_jvm/releases/download/v0.25.1/rules_jvm-v0.25.1.tar.gz",
)

# Fetches the contrib_rules_jvm dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
load("@contrib_rules_jvm//:repositories.bzl", "contrib_rules_jvm_deps")

contrib_rules_jvm_deps()

# Now ensure that the downloaded deps are properly configured
load("@contrib_rules_jvm//:setup.bzl", "contrib_rules_jvm_setup")

contrib_rules_jvm_setup()

http_archive(
    name = "rules_spring",
    sha256 = "87b337f95f9c09a2e5875f0bca533b050c9ccb8b0d2c92915e290520b79d0912",
    urls = [
        "https://github.com/salesforce/rules_spring/releases/download/2.3.2/rules-spring-2.3.2.zip",
    ],
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
