load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive", "http_jar")

http_archive(
    name = "rules_spring",
    sha256 = "87b337f95f9c09a2e5875f0bca533b050c9ccb8b0d2c92915e290520b79d0912",
    urls = [
        "https://github.com/salesforce/rules_spring/releases/download/2.3.2/rules-spring-2.3.2.zip",
    ],
)

http_jar(
    name = "bazel_diff",
    sha256 = "8e74d3526980f85cfd707fea4e6954bfd07063f7cce94a6a2ef129debb5a8a60",
    urls = [
        "https://github.com/Tinder/bazel-diff/releases/download/7.1.0/bazel-diff_deploy.jar",
    ],
)

register_toolchains("//:kotlin_toolchain")

http_archive(
    name = "openapi_tools_generator_bazel",
    sha256 = "ada94694b10f2503c52a48427bd8589323bff5910bd1a7e5212ce34702d0af65",
    urls = ["https://github.com/OpenAPITools/openapi-generator-bazel/releases/download/v0.1.6/openapi-tools-generator-bazel-0.1.6.tar.gz"],
)

load("@openapi_tools_generator_bazel//:defs.bzl", "openapi_tools_generator_bazel_repositories")

# You can provide any version of the CLI that has been uploaded to Maven
openapi_tools_generator_bazel_repositories(
    openapi_generator_cli_version = "6.4.0",
    sha256 = "35aead300e0c9469fbd9d30cf46f4153897dcb282912091ca4ec9212dce9d151",
)
