java_library(
    name = "greeter-lib",
    srcs = ["Greeter.java"],
    visibility = ["//visibility:public"],
)

java_binary(
    name = "hello",
    srcs = ["HelloWorld.java"],
    main_class = "examples.case3.HelloWorld",
    deps = [":greeter-lib"],
)

sh_test(
    name = "acceptance_test",
    size = "small",
    srcs = ["hello_world_test.sh"],
    data = [
        ":hello",
    ],
)
