load(":vite.bzl", "vite_build", "vite_dev_server")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

vite_build(
    name = "build",
    srcs = glob(
        [
            "src/**/*",
        ],
    ) + [
        "index.html",
        "package.json",
        "tsconfig.json",
        "vite.config.mjs",
        ":node_modules",
    ],
    config = "vite.config.mjs",
    out_dir = "build/client",
)

vite_dev_server(
    name = "dev",
    srcs = glob(
        [
            "src/**/*",
        ],
    ) + [
        "index.html",
        "package.json",
        "tsconfig.json",
        "vite.config.mjs",
        ":node_modules",
    ],
    config = "vite.config.mjs",
    out_dir = "build/client",
)
