load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_js//js:defs.bzl", "js_run_devserver")
load("@npm//workshop/case4:vite/package_json.bzl", vite_bin = "bin")
load("@npm//workshop/case4:typescript/package_json.bzl", typescript_bin = "bin")

npm_link_all_packages(name = "node_modules")

DEPS = [
    "index.html",
    "package.json",
    "tsconfig.json",
    "vite.config.mjs",
    ":node_modules",
]

vite_bin.vite(
    name = "build",
    srcs = glob(
        [
            "src/**/*",
        ],
    ) + DEPS,
    args = [
        "build",
        "--config",
        "vite.config.mjs",
    ],
    chdir = package_name(),
    out_dirs = ["dist"],
    tags = ["app"],
)

vite_bin.vite_binary(name = "vite_dev")

js_run_devserver(
    name = "dev",
    args = [
        "dev",
        "--config",
        "vite.config.mjs",
    ],
    chdir = package_name(),
    data = glob(
        [
            "src/**/*",
        ],
    ) + DEPS,
    tool = ":vite_dev",
)

vite_bin.vite_binary(
    name = "start",
    args = [
        "preview",
    ],
    chdir = package_name(),
    data = [":build"],
)

typescript_bin.tsc_test(
    name = "ts_test",
    size = "small",
    args = [
        "-b",
    ],
    chdir = package_name(),
    data = glob(
        [
            "src/**/*.tsx",
        ],
    ) + [
        "package.json",
        "tsconfig.json",
    ] + [
        ":node_modules",
    ],
)
