load("//tools:generic_spring_boot_app.bzl", "generic_spring_boot_app")

java_library(
    name = "app_lib",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = [
        "//teams/libs/backend/greeting-service",
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_boot_spring_boot_loader",
        "@maven//:org_springframework_boot_spring_boot_starter_web",
        "@maven//:org_springframework_spring_beans",
        "@maven//:org_springframework_spring_context",
        "@maven//:org_springframework_spring_web",
    ],
)

generic_spring_boot_app(
    name = "java-app",
    java_library = ":app_lib",
    package = "com.example.java",
    resources = glob(["src/main/resources/**/*"]),
    test_deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_springframework_boot_spring_boot_starter_test",
        "@maven//:org_springframework_boot_spring_boot_test",
        "@maven//:org_springframework_boot_spring_boot_test_autoconfigure",
        "@maven//:org_springframework_spring_test",
    ],
    test_srcs = glob(["src/test/java/**/*.java"]),
)
